--- a/src/main/resources/templates/book-view/add-book.html
+++ b/src/main/resources/templates/book-view/add-book.html
@@ -1,87 +1,132 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
-  <meta charset="UTF-8">
-  <title>Hệ thống quản lý thư viện</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
-        integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-        crossorigin="anonymous" referrerpolicy="no-referrer"/>
+    <meta charset="UTF-8">
+    <title>Hệ thống quản lý thư viện</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/css/layout/header.css}">
+    <link rel="stylesheet" th:href="@{/css/layout/sidebar.css}">
+    <link rel="stylesheet" th:href="@{/css/layout/menu.css}">
+    <link rel="stylesheet" th:href="@{/css/layout/content.css}">
+    <link rel="stylesheet" th:href="@{/css/book/add-book.css}">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+          integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer"/>
 
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-  <a class="navbar-brand h3 ml-auto" href="#"><b>Hệ thống quản lý thư viện</b></a>
-  <ul class="navbar-nav ml-auto">
-    <li class="nav-item">
-      <a class="nav-link" href="/logout">Logout</a>
-    </li>
-  </ul>
-</nav>
-<div class="container">
-
-  <div class="row mt-4">
-    <div class="col-md-2.5">
-      <div class="list-group">
-        <a  th:href="@{/home/book/books}" class="list-group-item list-group-item-action border-0">
-          <i class="fas fa-book mr-2 "></i>
-          Quản lý sách
-        </a>
-
-        <a  th:href="@{/home/book/find-book}" class="list-group-item list-group-item-action border-0">
-          <i class="fas fa-search mr-2 "></i> Tìm sách
-        </a>
-        <a  th:href="@{/home/book/add-book}" class="list-group-item list-group-item-action border-0">
-          <i class="fas fa-plus mr-2 text-primary"></i> <b class="text-primary">Thêm sách</b>
-        </a>
-        <a  th:href="@{/home}" class="list-group-item list-group-item-action border-0">
-          <i class="fas fa-home mr-2"></i> Quay lại trang chủ
-        </a>
-      </div>
+<div class="header d-flex justify-content-between">
+    <h5>Thêm sách</h5>
+    <div>
+        <b><a class="text-success" th:text="${username}">Username</a></b>
+        <a class="text-danger" th:href="@{/logout}">Đăng xuất</a>
     </div>
-    <div class="col-md-9">
-      <h3 class="mt-4">Thêm sách</h3>
-      <div th:if="${successMsg}!= null" class="alert alert-success alert-dismissible">
-        <button type="button" class="close" data-dismiss="alert">×</button>
-        <strong th:text="${successMsg}"></strong>
-      </div>
 
-      <div th:if="${errorMsg}!= null" class="alert alert-danger alert-dismissible">
-        <button type="button" class="close" data-dismiss="alert">×</button>
-        <strong th:text="${errorMsg}"></strong>
-      </div>
-      <div class="row mt-4">
-        <div class="col-md-6">
-          <form method="post" th:action="@{/home/book/add-book}">
-            <div class="mb-3">
-              <label for="bookCode" class="form-label">Mã sách</label>
-              <input type="text" class="form-control" id="bookCode" name="bookCode" placeholder="Nhập mã sách">
-            </div>
-            <div class="mb-3">
-              <label for="nameBook" class="form-label">Tên sách</label>
-              <input type="text" class="form-control" id="nameBook" name="nameBook" placeholder="Nhập tên sách">
-            </div>
-            <div class="mb-3">
-              <label for="author" class="form-label">Tác giả</label>
-              <input type="text" class="form-control" id="author" name="author" placeholder="Nhập tên tác giả">
-            </div>
-            <div class="mb-3">
-              <label for="category" class="form-label">Thể loại</label>
-              <input type="text" class="form-control" id="category" name="category" placeholder="Nhập tên thể loại">
-            </div>
-            <div class="mb-3">
-              <label for="totalNumber" class="form-label">Số lượng</label>
-              <input type="number" class="form-control" id="totalNumber" name="totalNumber" placeholder="Nhập số lượng">
-            </div>
-            <button type="submit" class="btn btn-primary">Thêm sách</button>
-          </form>
+</div>
+<div class="d-flex">
+    <div class="list-group">
+        <div class="sidebar-img">
+            <img th:src="@{/css/assets/logo.png}" alt="">
         </div>
-      </div>
+        <a th:href="@{/home/book/books(username=${username})}"
+           class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-book mr-2"></i><b>Quản lý sách</b>
+        </a>
+        <a th:href="@{/home/book/find-book(username=${username})}"
+           class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-search mr-2"></i> Tìm sách
+        </a>
+        <a th:href="@{/home/book/add-book(username=${username})}"
+           class="list-group-item list-group-item-action text-primary border-0">
+            <i class="fas fa-plus mr-2"></i> <b>Thêm sách</b>
+        </a>
+        <a th:href="@{/home(username=${username})}" class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-home mr-2"></i> Quay lại trang chủ
+        </a>
     </div>
-  </div>
+
+    <div class="content">
+        <div class="d-flex justify-content-between">
+            <div class="col-8">
+                <div th:if="${successMsg}!= null" class="alert alert-success alert-dismissible">
+                    <button type="button" class="close" data-dismiss="alert">×</button>
+                    <strong th:text="${successMsg}"></strong>
+                </div>
+
+                <div th:if="${errorMsg}!= null" class="alert alert-danger alert-dismissible">
+                    <button type="button" class="close" data-dismiss="alert">×</button>
+                    <strong th:text="${errorMsg}"></strong>
+                </div>
+
+                <div class="add-form">
+                    <form method="post" th:action="@{/home/book/add-book(username=${username})}">
+                        <div class="form-item">
+                            <label for="bookCode">Mã sách</label>
+                            <input type="text" class="form-control" id="bookCode" name="bookCode" autofocus
+                                   placeholder="">
+                        </div>
+                        <div class="form-item">
+                            <label for="nameBook">Tên sách</label>
+                            <input type="text" class="form-control" id="nameBook" name="nameBook" placeholder="">
+                        </div>
+                        <div class="form-item">
+                            <label for="author">Tác giả</label>
+                            <input type="text" class="form-control" id="author" name="author" placeholder="">
+                        </div>
+                        <div class="form-item">
+                            <label for="category">Thể loại</label>
+                            <input type="text" class="form-control" id="category" name="category" placeholder="">
+                        </div>
+                        <div class="form-item">
+                            <label for="totalNumber">Số lượng</label>
+                            <input type="number" class="form-control" id="totalNumber" name="totalNumber"
+                                   placeholder="">
+                        </div>
+                        <button type="submit" class="btn btn-primary mt-3 form-btn">Thêm sách</button>
+                    </form>
+                </div>
+            </div>
+            <div class="col-4 menu">
+                <div class="menu-items">
+                    <div class="menu-logo">
+                        <h4>Hệ thống quản lý thư viện</h4>
+                    </div>
+                    <div class="d-flex flex-wrap justify-content-center mt-4">
+                        <div class="menu-item menu-book bg-danger">
+                            <i class="fa-solid fa-book"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/book/books(username=${username})}">Quản lý sách</a>
+                        </div>
+                        <div class="menu-item menu-reader bg-primary">
+                            <i class="fa-solid fa-glasses"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/reader/readers(username=${username})}">Quản lý độc
+                                giả</a>
+                        </div>
+
+                        <div class="menu-item menu-borrow bg-warning">
+                            <i class="fa-solid fa-right-left"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/loan-slip/loan-slips(username=${username})}">Mượn
+                                sách</a>
+                        </div>
+                        <div class="menu-item menu-return bg-success">
+                            <i class="fa-solid fa-right-left"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/pay-slip/pay-slips(username=${username})}">Trả
+                                sách</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 </body>
+
 </html>
