--- a/src/main/resources/templates/book-view/book.html
+++ b/src/main/resources/templates/book-view/book.html
@@ -1,100 +1,124 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Hệ thống quản lý thư viện</title>
     <!--    <link rel="stylesheet" th:href="@{https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css}">-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/css/layout/header.css}">
+    <link rel="stylesheet" th:href="@{/css/layout/sidebar.css}">
+    <link rel="stylesheet" th:href="@{/css/layout/menu.css}">
+    <link rel="stylesheet" th:href="@{/css/layout/content.css}">
+    <link rel="stylesheet" th:href="@{/css/book/book.css}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
           integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand h3 ml-auto" href="#"><b>Hệ thống quản lý thư viện</b></a>
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <a class="nav-link" th:href="@{/logout}">Logout</a>
-        </li>
-    </ul>
-</nav>
-<div class="container">
+<div class="header d-flex justify-content-between">
+    <h5>Quản lý sách</h5>
+    <div>
+        <b><a class="text-success" th:text="${username}">Username</a></b>
 
-    <div class="row mt-4">
-        <div class="col-md-2.5">
-            <div class="list-group">
-                <a th:href="@{/home/book/books}" class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-book mr-2 text-primary"></i> <b class="text-primary">Quản lý sách</b>
-                </a>
-                <a th:href="@{/home/book/find-book}" class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-search mr-2"></i> Tìm sách
-                </a>
-                <a th:href="@{/home/book/add-book}" class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-plus mr-2"></i> Thêm sách
-                </a>
-                <a th:href="@{/home}" class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-home mr-2"></i> Quay lại trang chủ
-                </a>
-            </div>
+        <a class="text-danger" th:href="@{/logout}">Đăng xuất</a>
+    </div>
+</div>
+<div class="d-flex">
+    <div class="list-group">
+        <div class="sidebar-img">
+            <img th:src="@{/css/assets/logo.png}" alt="">
         </div>
-        <div class="col-md-9">
-            <div class="content">
-                <div class="row mt-4">
-                    <div class="col-md-12">
-                        <table class="table table-striped">
-                            <div>
-                                Show:
-                                <a id="pageSize" th:text="${books.getSize()}"></a>
-                            </div>
-                            <thead>
-                            <tr>
-                                <th>STT</th>
-                                <th>Mã Code</th>
-                                <th>Tên sách</th>
-                                <th>Tác giả</th>
-                                <th>Thể loại</th>
-                                <th>Số lượng</th>
-                                <th>Đang mượn</th>
-                                <th>Actions</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="book, index : ${books}">
-                                <td th:text="${index.index + 1 } + ${books.getNumber()}*${books.getSize()}">1</td>
-                                <td th:text="${book.bookCode}"></td>
-                                <td th:text="${book.nameBook}"></td>
-                                <td th:text="${book.author}"></td>
-                                <td th:text="${book.category}"></td>
-                                <td th:text="${book.totalNumber}"></td>
-                                <td th:text="${book.remainingNumber}"></td>
+        <a th:href="@{/home/book/books(username=${username})}"
+           class="list-group-item list-group-item-action text-primary border-0">
+            <i class="fas fa-book mr-2"></i><b>Quản lý sách</b>
+        </a>
+        <a th:href="@{/home/book/find-book(username=${username})}"
+           class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-search mr-2"></i> Tìm sách
+        </a>
+        <a th:href="@{/home/book/add-book(username=${username})}"
+           class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-plus mr-2"></i> Thêm sách
+        </a>
+        <a th:href="@{/home(username=${username})}" class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-home mr-2"></i> Quay lại trang chủ
+        </a>
+    </div>
+    <div class="content">
+        <div class="d-flex">
+            <div class="col-8">
+                <div class="book-results">
+                    <table class="table-results">
 
-                                <td>
-                                    <a href="#" class="btn btn-primary btn-sm">Sửa</a>
-                                    <a href="#" class="btn btn-danger btn-sm">Xóa</a>
-                                </td>
-                            </tr>
-                            <!-- Các dòng dữ liệu sách khác -->
-                            </tbody>
-                        </table>
-                        <div class="d-flex justify-content-end">
-                            <nav aria-label="Page navigation example">
-                                <ul class="pagination">
-                                    <li class="page-item"><a class="page-link" id="previous-link"
-                                                             th:if="${books.getNumber() > 0}"
-                                                             th:href="@{books(pageNo=${books.getNumber() - 1})}">Previous</a>
-                                    </li>
-                                    <li class="page-item"><a class="page-link" th:text="${books.getNumber() +1}"
-                                                             id="pageNo"> </a></li>
-                                    <li class="page-item"><a class="page-link " id="next-link"
-                                                             th:if="${books.getNumber()} < ${books.getTotalPages() -1}"
-                                                             th:href="@{books(pageNo=${books.getNumber()+1})}">Next</a>
-                                    </li>
-                                </ul>
-                            </nav>
+                        <tr>
+                            <th style="width: 30px;">STT</th>
+                            <th style="width: 100px;">Mã Code</th>
+                            <th style="width: 200px;">Tên sách</th>
+                            <th style="width: 150px;">Tác giả</th>
+                            <th style="width: 100px;">Thể loại</th>
+                            <th style="width: 100px;">Số lượng</th>
+                            <th style="width: 120px;">Đang mượn</th>
+                        </tr>
+                        <tr th:each="book, index : ${books}">
+                            <td th:text="${index.index + 1}">1</td>
+                            <td th:text="${book.bookCode}">12345</td>
+                            <td th:text="${book.nameBook}">Tôi thấy hoa vàng trên cỏ xanh</td>
+                            <td th:text="${book.author}">Nguyễn Nhật Ánh</td>
+                            <td th:text="${book.category}">Truyện ngắn</td>
+                            <td th:text="${book.totalNumber}">0</td>
+                            <td th:text="${book.remainingNumber}">1</td>
+                        </tr>
+                        <!-- Các dòng dữ liệu sách khác -->
+                    </table>
+                </div>
+                <div class="d-flex justify-content-end mt-4">
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
+                            <li class="page-item"><a class="page-link" id="previous-link" th:if="${books.getNumber() > 0}"
+                                                     th:href="@{books(pageNo=${books.getNumber() - 1},username=${username})}">Previous</a></li>
+                            <li class="page-item"><a class="page-link" th:text="${books.getNumber() +1}" id="pageNo"> </a></li>
+                            <li class="page-item"><a class="page-link " id="next-link"
+                                                     th:if="${books.getNumber()} < ${books.getTotalPages() -1}"
+                                                     th:href="@{books(pageNo=${books.getNumber()+1},username=${username})}">Next</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="col-4 menu">
+                <div class="menu-items">
+                    <div class="menu-logo">
+                        <h4>Hệ thống quản lý thư viện</h4>
+                    </div>
+                    <div class="d-flex flex-wrap justify-content-center mt-4">
+                        <div class="menu-item menu-book bg-danger">
+                            <i class="fa-solid fa-book"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/book/books(username=${username})}">Quản lý sách</a>
+                        </div>
+                        <div class="menu-item menu-reader bg-primary">
+                            <i class="fa-solid fa-glasses"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/reader/readers(username=${username})}">Quản lý độc
+                                giả</a>
+                        </div>
+
+                        <div class="menu-item menu-borrow bg-warning">
+                            <i class="fa-solid fa-right-left"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/loan-slip/loan-slips(username=${username})}">Mượn
+                                sách</a>
+                        </div>
+                        <div class="menu-item menu-return bg-success">
+                            <i class="fa-solid fa-right-left"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/pay-slip/pay-slips(username=${username})}">Trả
+                                sách</a>
                         </div>
                     </div>
                 </div>
