--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,78 +1,86 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Hệ thống quản lý thư viện</title>
-    <!--    <link rel="stylesheet" th:href="@{https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css}">-->
+    <link rel="stylesheet" th:href="@{/css/home.css}">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+          integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand h3 ml-auto " href="#"><b>Hệ thống quản lý thư viện</b></a>
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <a class="nav-link" href="/logout">Logout</a>
-        </li>
-    </ul>
-</nav>
-<div class="container">
-    <div class="content mt-4 bg-light">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Quản lý sách</h5>
-                        <p class="card-text">Thêm, sửa, tìm kiếm sách trong thư viện.</p>
-                        <a th:href="@{/home/book/books}" class="btn btn-primary">Đến trang quản lý sách</a>
-                    </div>
-                </div>
+<div class="d-flex mt-5">
+    <div class="col-7 menu">
+        <div class="menu-items">
+            <div class="menu-logo">
+                <h4>Hệ thống quản lý thư viện</h4>
             </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Quản lý độc giả</h5>
-                        <p class="card-text">Thêm, sửa, tìm kiếm thông tin độc giả.</p>
-                        <a th:href="@{/home/reader/readers}" class="btn btn-primary">Đến trang quản lý độc giả</a>
-                    </div>
+            <div class="d-flex flex-wrap justify-content-center mt-4">
+                <div class="menu-item menu-book bg-danger">
+                    <i class="fa-solid fa-book"></i>
+                    <br>
+                    <a class="text-light" th:href="@{/home/book/books(username=${username})}">Quản lý sách</a>
                 </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Chỉnh sửa thông tin cá nhân</h5>
-                        <p class="card-text">Chỉnh sửa thông tin cá nhân.</p>
-                        <a href="#" class="btn btn-primary">Đến trang chỉnh sửa thông tin cá nhân</a>
-                    </div>
+                <div class="menu-item menu-reader bg-primary">
+                    <i class="fa-solid fa-glasses"></i>
+                    <br>
+                    <a class="text-light" th:href="@{/home/reader/readers(username=${username})}">Quản lý độc giả</a>
                 </div>
-            </div>
 
-        </div>
-        <div class="row mt-4">
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Thao tác mượn sách</h5>
-                        <p class="card-text">Tạo, tìm kiếm phiếu mượn sách.</p>
-                        <a th:href="@{/home/loan-slip/loan-slips}" class="btn btn-primary">Đến trang quản lý phiếu mượn</a>
-                    </div>
+                <div class="menu-item menu-borrow bg-warning">
+                    <i class="fa-solid fa-right-left"></i>
+                    <br>
+                    <a class="text-light" th:href="@{/home/loan-slip/loan-slips(username=${username})}">Mượn sách</a>
+                </div>
+                <div class="menu-item menu-return bg-success">
+                    <i class="fa-solid fa-right-left"></i>
+                    <br>
+                    <a class="text-light" th:href="@{/home/pay-slip/pay-slips(username=${username})}">Trả sách</a>
                 </div>
             </div>
-            <div class="col-md-4">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Thao tác trả sách</h5>
-                        <p class="card-text">Tạo, tìm kiếm phiếu trả sách.</p>
-                        <a th:href="@{/home/pay-slip/pay-slips}" class="btn btn-primary">Đến trang quản lý phiếu trả</a>
-                    </div>
-                </div>
+        </div>
+    </div>
+    <div class="col-5">
+        <div class="header d-flex justify-content-between">
+<!--            <h5>Thông tin tài khoản</h5>-->
+            <div>
+                <strong><a class="text-success" th:text="${username}">Username</a></strong>
+                <a class="text-danger" th:href="@{/logout}">Đăng xuất</a>
+            </div>
+        </div>
+        <div class="account mt-5">
+            <div class="account-logo">
+                <img th:src="@{/css/assets/logo-home.jpg}" alt="" srcset="">
+            </div>
+            <div class="account-table">
+                <table>
+                    <tr>
+                        <td style="width: 30%;">Tên tài khoản</td>
+                        <td>Hoàng Hồng Cẩm</td>
+                    </tr>
+                    <tr>
+                        <td>E-mail</td>
+                        <td>camhh2606@gmail.com</td>
+                    </tr>
+                    <tr>
+                        <td>Điện thoại</td>
+                        <td>0123456789</td>
+                    </tr>
+                    <tr>
+                        <td>Địa chỉ</td>
+                        <td>176 Trương Định, Hoàng Mai, Hà Nội</td>
+                    </tr>
+                </table>
             </div>
         </div>
     </div>
 </div>
 </body>
+
 </html>
