--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,31 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <title>Hệ thống quản lý thư viện</title>
-    <!--    <link rel="stylesheet" th:href="@{https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css}">-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/css/login.css}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
 
 </head>
 <body>
-<div class="container d-flex">
-    <div class="col-3"></div>
-    <div class="col-6">
-        <h2>Đăng nhập</h2>
+<div class="container-fluid d-flex">
+    <div class="col-3 col-lg-4"></div>
+    <div class="col-6 col-lg-4 login-form">
+        <h2 class="text-center mb-5 text-uppercase">Đăng nhập</h2>
         <form th:action="@{/login}" method="post">
             <div class="form-group">
-                <label for="username">Tên đăng nhập:</label>
-                <input type="text" class="form-control" id="username" name="username">
+                <input type="text" class="form-control rounded-pill" id="username" name="username" placeholder="Tên đăng nhập">
             </div>
             <div class="form-group">
-                <label for="password">Mật khẩu:</label>
-                <input type="password" class="form-control" id="password" name="password">
+                <input type="password" class="form-control rounded-pill" id="password" name="password" placeholder="Mật khẩu">
             </div>
-            <button type="submit" class="btn btn-primary">Đăng nhập</button>
+            <button type="submit" class="btn btn-danger rounded-pill mt-4 text-uppercase">Đăng nhập</button>
         </form>
     </div>
-    <div class="col-3"></div>
+    <div class="col-3 col-lg-4"></div>
 </div>
 </body>
 </html>
