--- a/src/main/resources/templates/reader-view/reader.html
+++ b/src/main/resources/templates/reader-view/reader.html
@@ -1,90 +1,130 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Hệ thống quản lý thư viện</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/css/layout/header.css}">
+    <link rel="stylesheet" th:href="@{/css/layout/sidebar.css}">
+    <link rel="stylesheet" th:href="@{/css/layout/menu.css}">
+    <link rel="stylesheet" th:href="@{/css/layout/content.css}">
+    <link rel="stylesheet" th:href="@{/css/reader/reader.css}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+          integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand h3 ml-auto" href="#"><b>Hệ thống quản lý thư viện</b></a>
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <a class="nav-link" th:href="@{/logout}">Logout</a>
-        </li>
-    </ul>
-</nav>
-<div class="container">
+<div class="header d-flex justify-content-between">
+    <h5>Quản lý độc giả</h5>
+    <div>
+        <strong><a class="text-success" th:text="${username}">Username</a></strong>
+        <a class="text-danger" th:href="@{/logout}">Đăng xuất</a>
+    </div>
+</div>
+<div class="d-flex">
+    <div class="list-group">
+        <div class="sidebar-img">
+            <img th:src="@{/css/assets/logo.png}" alt="">
 
-    <div class="row mt-4">
-        <div class="col-md-2.5">
-            <div class="list-group">
-                <a th:href="@{/home/reader/readers}"  class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-book mr-2 text-primary"></i> <b class="text-primary">Quản lý độc giả</b>
-                </a>
-                <a th:href="@{/home/reader/find-reader}" class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-search mr-2"></i> Tìm kiếm độc giả
-                </a>
-                <a th:href="@{/home/reader/add-reader}" class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-plus mr-2"></i> Đăng ký độc giả mới
-                </a>
-                <a th:href="@{/home}" class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-home mr-2"></i> Quay lại trang chủ
-                </a>
-            </div>
         </div>
-        <div class="col-md-9">
-            <div class="content">
-                <div class="row mt-4">
-                    <div class="col-md-12">
-                        <table class="table table-striped">
-                            <div>
-                                Show:
-                                <a id="pageSize" th:text="${readers.getSize()}"></a>
-                            </div>
-                            <thead>
-                            <tr>
-                                <th>STT</th>
-                                <th>Mã độc giả</th>
-                                <th>Họ tên</th>
-                                <th>Ngày sinh</th>
-                                <th>CCCD</th>
-                                <th>SĐT</th>
-                                <th>Địa chỉ</th>
-                                <th>Ngày lập</th>
+        <a th:href="@{/home/reader/readers(username=${username})}" class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-book mr-2 text-primary"></i> <b class="text-primary">Quản lý độc giả</b>
+        </a>
+        <a th:href="@{/home/reader/find-reader(username=${username})}" class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-search mr-2"></i> Tìm kiếm độc giả
+        </a>
+        <a th:href="@{/home/reader/add-reader(username=${username})}" class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-plus mr-2"></i> Đăng ký độc giả mới
+        </a>
 
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="reader, index : ${readers}">
-                                <td th:text="${index.index + 1 } + ${readers.getNumber()}*${readers.getSize()}"></td>
-                                <td th:text="${reader.id}"></td>
-                                <td th:text="${reader.fullName}"></td>
-                                <td th:text="${reader.birthday}"></td>
-                                <td th:text="${reader.cccd}"></td>
-                                <td th:text="${reader.phoneNumber}"></td>
-                                <td th:text="${reader.address}"></td>
-                                <td th:text="${reader.createdDate}"></td>
+        <a th:href="@{/home(username=${username})}" class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-home mr-2"></i> Quay lại trang chủ
+        </a>
+    </div>
 
-                            </tr>
-                            <!-- Các dòng dữ liệu sách khác -->
-                            </tbody>
-                        </table>
-                        <div class="d-flex justify-content-end">
-                            <nav aria-label="Page navigation example">
-                                <ul class="pagination">
-                                    <li class="page-item"><a class="page-link" id="previous-link" th:if="${readers.getNumber() > 0}"
-                                                             th:href="@{readers(pageNo=${readers.getNumber() - 1})}">Previous</a></li>
-                                    <li class="page-item"><a class="page-link" th:text="${readers.getNumber() +1}" id="pageNo"> </a></li>
-                                    <li class="page-item"><a class="page-link " id="next-link"
-                                                             th:if="${readers.getNumber()} < ${readers.getTotalPages() -1}"
-                                                             th:href="@{readers(pageNo=${readers.getNumber()+1})}">Next</a></li>
-                                </ul>
-                            </nav>
+    <div class="content">
+        <div class="d-flex">
+            <div class="col-8">
+                <div class="reader-results">
+                    <table class="table-results">
+
+                        <tr>
+                            <th>STT</th>
+                            <th>Mã</th>
+                            <th>Họ tên</th>
+                            <th>Ngày sinh</th>
+                            <th>CCCD</th>
+                            <th>SĐT</th>
+                            <th>Địa chỉ</th>
+                            <th>Ngày lập</th>
+
+                        </tr>
+                        <tr th:each="reader, index : ${readers}">
+                            <td th:text="${index.index + 1 } + ${readers.getNumber()}*${readers.getSize()}">1
+                            </td>
+                            <td th:text="${reader.id}">12345</td>
+                            <td th:text="${reader.fullName}">Trương Thị Khánh Huyền</td>
+                            <td th:text="${reader.birthday}">01/04/2002</td>
+                            <td th:text="${reader.cccd}">002034764357</td>
+                            <td th:text="${reader.phoneNumber}">8765678906</td>
+                            <td th:text="${reader.address}">176 Trương Định, Hoàng Mai, Hà Nội</td>
+                            <td th:text="${reader.createdDate}">06/06/2023</td>
+                        </tr>
+
+                        <!-- Các dòng dữ liệu sách khác -->
+                    </table>
+                </div>
+                <div class="d-flex justify-content-end mt-4">
+                    <nav aria-label="Page navigation example">
+                        <ul class="pagination">
+                            <li class="page-item"><a class="page-link" id="previous-link"
+                                                     th:if="${readers.getNumber() > 0}"
+                                                     th:href="@{readers(pageNo=${readers.getNumber() - 1},username=${username})}">Previous</a>
+                            </li>
+                            <li class="page-item"><a class="page-link" th:text="${readers.getNumber() +1}"
+                                                     id="pageNo">
+                            </a></li>
+                            <li class="page-item"><a class="page-link " id="next-link"
+                                                     th:if="${readers.getNumber()} < ${readers.getTotalPages() -1}"
+                                                     th:href="@{readers(pageNo=${readers.getNumber()+1},username=${username})}">Next</a></li>
+                        </ul>
+                    </nav>
+                </div>
+            </div>
+            <div class="col-4 menu">
+                <div class="menu-items">
+                    <div class="menu-logo">
+                        <h4>Hệ thống quản lý thư viện</h4>
+                    </div>
+                    <div class="d-flex flex-wrap justify-content-center mt-4">
+                        <div class="menu-item menu-book bg-danger">
+                            <i class="fa-solid fa-book"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/book/books(username=${username})}">Quản lý sách</a>
+                        </div>
+                        <div class="menu-item menu-reader bg-primary">
+                            <i class="fa-solid fa-glasses"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/reader/readers(username=${username})}">Quản lý độc
+                                giả</a>
+                        </div>
+
+                        <div class="menu-item menu-borrow bg-warning">
+                            <i class="fa-solid fa-right-left"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/loan-slip/loan-slips(username=${username})}">Mượn
+                                sách</a>
+                        </div>
+                        <div class="menu-item menu-return bg-success">
+                            <i class="fa-solid fa-right-left"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/pay-slip/pay-slips(username=${username})}">Trả
+                                sách</a>
                         </div>
                     </div>
                 </div>
