--- a/src/main/resources/templates/slip-view/create-loan.html
+++ b/src/main/resources/templates/slip-view/create-loan.html
@@ -1,106 +1,149 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Hệ thống quản lý thư viện</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/css/layout/header.css}">
+    <link rel="stylesheet" th:href="@{/css/layout/sidebar.css}">
+    <link rel="stylesheet" th:href="@{/css/layout/menu.css}">
+    <link rel="stylesheet" th:href="@{/css/layout/content.css}">
+    <link rel="stylesheet" th:href="@{/css/slip/create-loan.css}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
           integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand h3 ml-auto" href="#"><b>Hệ thống quản lý thư viện</b></a>
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <a class="nav-link" th:href="@{/logout}">Logout</a>
-        </li>
-    </ul>
-</nav>
-<div class="container">
+<div class="header d-flex justify-content-between">
+    <h5>Đăng ký mượn sách</h5>
+    <div>
+        <strong><a class="text-success" th:text="${username}">Username</a></strong>
+        <a class="text-danger" th:href="@{/logout}">Đăng xuất</a>
+    </div>
+</div>
+<div class="d-flex">
+    <div class="list-group">
+        <div class="sidebar-img">
+            <img th:src="@{/css/assets/logo.png}" alt="">
 
-    <div class="row mt-4">
-        <div class="col-md-2.5">
-            <div class="list-group">
-                <a th:href="@{/home/loan-slip/loan-slips}" class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-book mr-2 text-primary"></i> <b class="text-primary">Quản lý mượn sách</b>
-                </a>
-
-                <a th:href="@{/home/loan-slip/create-loan}" class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-plus mr-2"></i> Đăng ký mượn sách
-                </a>
-                <a th:href="@{/home/loan-slip/find-loan}" class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-search mr-2"></i> Tìm kiếm
-                </a>
-                <a th:href="@{/home}" class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-home mr-2"></i> Quay lại trang chủ
-                </a>
-            </div>
         </div>
-        <div class="col-md-9">
-            <h3 class="mt-4">Phiếu mượn sách</h3>
-            <div style="display: none" id="success-msg" class="alert alert-success alert-dismissible">
-                <button type="button" class="close" data-dismiss="alert">×</button>
-                <strong></strong>
-            </div>
+        <a th:href="@{/home/loan-slip/loan-slips(username=${username})}" class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-book mr-2"></i> Quản lý mượn sách
+        </a>
 
-            <form>
-                <div class="mb-3">
-                    <label for="librarianId" class="form-label">Thủ thư</label>
-                    <input type="text" class="form-control" id="librarianId" name="librarianId"
-                           placeholder="Nhập mã thủ thư">
+        <a th:href="@{/home/loan-slip/create-loan(username=${username})}" class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-plus mr-2 text-primary"></i> <b class="text-primary">Đăng ký mượn sách</b>
+        </a>
+        <a th:href="@{/home/loan-slip/find-loan(username=${username})}" class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-search mr-2"></i> Tìm kiếm
+        </a>
+        <a th:href="@{/home(username=${username})}" class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-home mr-2"></i> Quay lại trang chủ
+        </a>
+    </div>
+    <div class="content">
+        <div class="d-flex">
+            <div class="col-8">
+                <div style="display: none" id="success-msg" class="alert alert-success alert-dismissible">
+                    <button type="button" class="close" data-dismiss="alert">×</button>
+                    <strong></strong>
                 </div>
-                <div class="mb-3">
-                    <label for="readerId" class="form-label">Người mượn</label>
-                    <input type="text" class="form-control" id="readerId" name="readerId" placeholder="Nhập mã độc giả">
-                </div>
-                <div class="mb-3">
-                    <label for="createDate" class="form-label">Ngày mượn</label>
-                    <input type="date" class="form-control" id="createDate" name="createDate"
-                           th:value="${createDate}">
-                </div>
-                <div class="mb-3">
-                    <label for="dueDate" class="form-label">Hạn mượn (mặc định là 7 ngày sau)</label>
-                    <input type="date" class="form-control" id="dueDate" name="dueDate"
-                           th:value="${dueDate}">
-                </div>
-                <hr>
-                <div class="input-group mb-3">
-                    <input type="text" class="form-control " id="bookCode" name="bookCode" placeholder="Nhập mã sách">
-                    <div class="input-group-append">
-                        <button class="btn btn-primary" type="button" onclick="addBook()"><i class="fas fa-plus"></i>
+
+                <form>
+                    <div class="form-item">
+                        <label for="librarianName" class="form-label">Thủ thư</label>
+                        <input type="text" class="form-control" id="librarianName" th:value="${username}" placeholder=""
+                               autofocus>
+                    </div>
+                    <div class="form-item">
+                        <label for="readerId" class="form-label">Người mượn</label>
+                        <input type="text" class="form-control" id="readerId" name="readerId" placeholder="">
+                    </div>
+                    <div class="form-item">
+                        <label for="createDate" class="form-label">Ngày mượn</label>
+                        <input type="date" class="form-control" id="createDate" name="createDate"
+                               th:value="${createDate}">
+                    </div>
+                    <div class="form-item">
+                        <label for="dueDate" class="form-label">Hạn mượn (mặc định là 7 ngày sau)</label>
+                        <input type="date" class="form-control" id="dueDate" name="dueDate" th:value="${dueDate}">
+                    </div>
+                    <div class="form-item">
+                        <label for="bookCode" class="form-label">Mã sách</label>
+
+                        <input type="text" class="form-control " id="bookCode" name="bookCode" placeholder="">
+                        <button class="btn btn-primary form-btn mx-auto" type="button" onclick="addBook()"><i
+                                class="fas fa-plus"></i>
                             Thêm
                         </button>
                     </div>
+
+                    <div class="mt-3">
+                        <label class="form-label">Danh sách mượn: </label>
+                        <table class="table table-striped" id="bookTable">
+                            <thead>
+                            <tr>
+                                <th style="width: 100px;">Mã sách</th>
+                                <th>Tên sách</th>
+                                <th>Tác giả</th>
+                                <th>Thể loại</th>
+                                <th>#</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+
+                            </tbody>
+
+                        </table>
+                    </div>
+                </form>
+                <div class="loan-btn d-flex justify-content-center">
+                    <button type="button" class="btn btn-primary form-btn" onclick="creatLoanSlip()">Đăng ký
+                        mượn</button>
+                    <button class="btn btn-primary form-btn" th:href="@{/home/loan-slip/create-loan(username=${username})}">Tải
+                        lại
+                        trang</button>
                 </div>
+            </div>
+            <div class="col-4 menu">
+                <div class="menu-items">
+                    <div class="menu-logo">
+                        <h4>Hệ thống quản lý thư viện</h4>
+                    </div>
+                    <div class="d-flex flex-wrap justify-content-center mt-4">
+                        <div class="menu-item menu-book bg-danger">
+                            <i class="fa-solid fa-book"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/book/books(username=${username})}">Quản lý sách</a>
+                        </div>
+                        <div class="menu-item menu-reader bg-primary">
+                            <i class="fa-solid fa-glasses"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/reader/readers(username=${username})}">Quản lý độc
+                                giả</a>
+                        </div>
 
-                <div class="mb-3">
-                    <label class="form-label">Danh sách mượn: </label>
-
-                    <table class="table table-striped" id="bookTable">
-                        <thead>
-                        <tr>
-                            <th>Mã sách</th>
-                            <th>Tên sách</th>
-                            <th>Tác giả</th>
-                            <th>Thể loại</th>
-                            <th>#</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-
-                    </table>
+                        <div class="menu-item menu-borrow bg-warning">
+                            <i class="fa-solid fa-right-left"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/loan-slip/loan-slips(username=${username})}">Mượn
+                                sách</a>
+                        </div>
+                        <div class="menu-item menu-return bg-success">
+                            <i class="fa-solid fa-right-left"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/pay-slip/pay-slips(username=${username})}">Trả
+                                sách</a>
+                        </div>
+                    </div>
                 </div>
-            </form>
-            <form>
-                <button type="button" onclick="creatLoanSlip()" class="btn btn-primary">Đăng ký mượn</button>
-                <button class="btn btn-primary" type="button" onclick="window.location.reload();">Tải lại trang</button>
-            </form>
+            </div>
         </div>
-
     </div>
 </div>
 </body>
@@ -122,7 +165,7 @@
                     '<td>' + response.category + '</td>' +
                     '<td>' + '<button type="button" class="btn btn-danger fas fa-remove" onclick="removeRow()"></button>' + '</td>' +
                     '</tr>';
-                alert(row);
+                // alert(row);
                 $("#bookTable").append(row);
             },
             error: function (xhr) {
@@ -133,7 +176,7 @@
     }
 
     function creatLoanSlip() {
-        var librarianId = $("#librarianId").val();
+        var librarianName = $("#librarianName").val();
         var readerId = $("#readerId").val();
         var bookCodes = [];
         var createDate = $("#createDate").val();
@@ -145,7 +188,7 @@
         });
 
         var data = {
-            librarianId: librarianId,
+            librarianName: librarianName,
             readerId: readerId,
             bookCodes: bookCodes,
             createDate: createDate,
@@ -175,8 +218,7 @@
                 console.log(response);
             },
             error: function (xhr) {
-                alert("Error");
-                alert(xhr);
+                alert("Khong tim thay sach");
             }
         })
     }
@@ -187,4 +229,5 @@
         row.remove();
     }
 </script>
+
 </html>
