--- a/src/main/resources/templates/slip-view/find-loan.html
+++ b/src/main/resources/templates/slip-view/find-loan.html
@@ -1,90 +1,119 @@
 <!DOCTYPE html>
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
+
 <head>
     <meta charset="UTF-8">
     <title>Hệ thống quản lý thư viện</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" th:href="@{/css/layout/header.css}">
+    <link rel="stylesheet" th:href="@{/css/layout/sidebar.css}">
+    <link rel="stylesheet" th:href="@{/css/layout/menu.css}">
+    <link rel="stylesheet" th:href="@{/css/layout/content.css}">
+    <link rel="stylesheet" th:href="@{/css/slip/find-loan.css}">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
           integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
-          crossorigin="anonymous" referrerpolicy="no-referrer"/>
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
+
 <body>
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <a class="navbar-brand h3 ml-auto" href="#"><b>Hệ thống quản lý thư viện</b></a>
-    <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-            <a class="nav-link" th:href="@{/logout}">Logout</a>
-        </li>
-    </ul>
-</nav>
-<div class="container">
+<div class="header d-flex justify-content-between">
+    <h5>Tìm phiếu mượn</h5>
+    <div>
+        <strong><a class="text-success" th:text="${username}">Username</a></strong>
+        <a class="text-danger" th:href="@{/logout}">Đăng xuất</a>
+    </div>
+</div>
+<div class="d-flex">
+    <div class="list-group">
+        <div class="sidebar-img">
+            <img th:src="@{/css/assets/logo.png}" alt="">
 
-    <div class="row mt-4">
-        <div class="col-md-2.5">
-            <div class="list-group">
-                <a th:href="@{/home/loan-slip/loan-slips}" class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-book mr-2 "></i> Quản lý mượn sách
-                </a>
-                <a th:href="@{/home/loan-slip/create-loan}" class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-plus mr-2"></i>Đăng ký mượn sách
-                </a>
-                <a th:href="@{/home/loan-slip/find-loan}" class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-search mr-2 text-primary"></i> <b class="text-primary">Tìm kiếm</b>
-                </a>
-
-                <a th:href="@{/home}" class="list-group-item list-group-item-action border-0">
-                    <i class="fas fa-home mr-2"></i>Quay lại trang chủ
-                </a>
-            </div>
         </div>
-        <div class="col-md-9">
-            <h3 class="mt-4">Tìm kiếm phiếu mượn</h3>
-            <div class="row mt-4">
-                <div class="col-md-9">
-                    <form th:action="@{/home/loan-slip/find-loan}" method="post">
-                        <div class="input-group mb-3">
-                            <input type="text" class="form-control" th:value="${id}" name="id" placeholder="mã phiếu mượn">
-                            <input type="text" class="form-control" th:value="${idReader}" name="idReader" placeholder="mã độc giả">
-                            <div class="input-group-append">
-                                <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i> Tìm kiếm
-                                </button>
-                            </div>
+        <a th:href="@{/home/loan-slip/loan-slips(username=${username})}" class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-book mr-2 "></i> Quản lý mượn sách
+        </a>
+        <a th:href="@{/home/loan-slip/create-loan(username=${username})}" class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-plus mr-2"></i>Đăng ký mượn sách
+        </a>
+        <a th:href="@{/home/loan-slip/find-loan(username=${username})}" class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-search mr-2 text-primary"></i> <b class="text-primary">Tìm kiếm</b>
+        </a>
+        <a th:href="@{/home(username=${username})}" class="list-group-item list-group-item-action border-0">
+            <i class="fas fa-home mr-2"></i>Quay lại trang chủ
+        </a>
+    </div>
+    <div class="content">
+        <div class="d-flex">
+            <div class="col-8">
+                <form th:action="@{/home/loan-slip/find-loan(username=${username})}" method="post">
+                    <div class="find-search input-group mb-3">
+                        <input type="text" class="form-control" th:value="${idSlip}" name="idSlip"
+                               placeholder="mã phiếu mượn" autofocus>
+                        <input type="text" class="form-control" th:value="${idReder}" name="idReader"
+                               placeholder="mã độc giả">
+                        <div class="input-group-append">
+                            <button class="btn btn-primary" type="submit"><i class="fas fa-search"></i></button>
                         </div>
-                    </form>
+                    </div>
+                </form>
+                <!-- Kết quả tìm kiếm -->
+                <h6 class="mt-4">Kết quả tìm kiếm</h6>
+                <div class="find-results">
+                    <table class="table-results">
+                        <tr>
+                            <th style="width: 30px;">Mã phiếu</th>
+                            <th style="min-width: 200px;">Người mượn</th>
+                            <th style="width: 100px;">Danh sách</th>
+                            <th style="width: 80px;">Ngày mượn</th>
+                            <th style="width: 80px;">Hạn mượn</th>
+                            <th style="width: 100px;">Trạng thái</th>
+                            <th style="width: 200px;">Người lập</th>
+                        </tr>
+                        <tr th:each="loanSlip : ${loanSlips}">
+                            <td th:text="${loanSlip.id}"></td>
+                            <td th:text="${loanSlip.reader}"></td>
+                            <td th:text="${loanSlip.books}"></td>
+                            <td th:text="${loanSlip.createDate}"></td>
+                            <td th:text="${loanSlip.dueDate}"></td>
+                            <td th:text="${loanSlip.status}"></td>
+                            <td th:text="${loanSlip.librarian}"></td>
+                        </tr>
+                    </table>
                 </div>
             </div>
-            <!-- Kết quả tìm kiếm -->
-            <h3 class="mt-4">Kết quả tìm kiếm</h3>
-            <div class="content">
-                <div class="row mt-4">
-                    <div class="col-md-12">
-                        <table class="table table-striped">
-                            <thead>
-                            <tr>
-                                <th>Mã phiếu</th>
-                                <th>Người mượn</th>
-                                <th>Danh sách mượn</th>
-                                <th>Ngày mượn</th>
-                                <th>Hạn mượn</th>
-                                <th>Trạng thái</th>
-                                <th>Thủ thư</th>
-                            </tr>
-                            </thead>
-                            <tbody>
-                            <tr th:each="loanSlip : ${loanSlips}">
-                                <td th:text="${loanSlip.id}"></td>
-                                <td th:text="${loanSlip.reader}"></td>
-                                <td th:text="${loanSlip.books}"></td>
-                                <td th:text="${loanSlip.createDate}"></td>
-                                <td th:text="${loanSlip.dueDate}"></td>
-                                <td th:text="${loanSlip.status}"></td>
-                                <td th:text="${loanSlip.librarian}"></td>
-                            </tr>
-                            </tbody>
-                        </table>
+            <div class="col-4 menu">
+                <div class="menu-items">
+                    <div class="menu-logo">
+                        <h4>Hệ thống quản lý thư viện</h4>
+                    </div>
+                    <div class="d-flex flex-wrap justify-content-center mt-4">
+                        <div class="menu-item menu-book bg-danger">
+                            <i class="fa-solid fa-book"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/book/books(username=${username})}">Quản lý sách</a>
+                        </div>
+                        <div class="menu-item menu-reader bg-primary">
+                            <i class="fa-solid fa-glasses"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/reader/readers(username=${username})}">Quản lý độc
+                                giả</a>
+                        </div>
+
+                        <div class="menu-item menu-borrow bg-warning">
+                            <i class="fa-solid fa-right-left"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/loan-slip/loan-slips(username=${username})}">Mượn
+                                sách</a>
+                        </div>
+                        <div class="menu-item menu-return bg-success">
+                            <i class="fa-solid fa-right-left"></i>
+                            <br>
+                            <a class="text-light" th:href="@{/home/pay-slip/pay-slips(username=${username})}">Trả
+                                sách</a>
+                        </div>
                     </div>
                 </div>
             </div>
